--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <p class="text-sm mt-4 text--gray-400">if you are already a member, easily log in</p>
 
                 <form action="" class="flex flex-col gap-4">
-                    <input class="p-2 mt-8 rounded-xl border" type="text" name="email" placeholder="Email">
+                    <input class="p-2 mt-8 rounded-xl border" type="text" name="username" placeholder="Username">
                     <div class="relative">
                     <input class="p-2 rounded-xl border w-full" type="password"name="password" placeholder="Password" >
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-eye absolute top-1 right-3 translate-y-1/2" viewBox="0 0 16 16">
