--- a/employee.html
+++ b/employee.html
@@ -15,6 +15,8 @@
                 <th class="py-3 bg-[#b0b0b0]">Job Title</th>
                 <th class="py-3 bg-[#b0b0b0]">Department</th>
                 <th class="py-3 bg-[#b0b0b0]">Email</th>
+                <th class="py-3 bg-[#b0b0b0]">Action</th>
+                
             </tr>    
         </thead>
         <tbody class="text-[#ffffff] text-center">
@@ -23,6 +25,8 @@
                 <td class="py-3 px-6">Software Engineer</td>
                 <td class="py-3 px-6">IT</td>
                 <td class="py-3 px-6">ivan.petrov@sinksrus.com</td>
+                <td class="py-3 px-6"><a href="index.html"</td>
+                
             </tr>
             <tr class="bg-[#5d5a5a] hover:bg-[#aaa2a2] hover:scale-105 cursor-pointer duration-300">
                 <td class="py-3 px-6">Pedro Los Baños</td>
