--- a/employee.html
+++ b/employee.html
@@ -25,7 +25,7 @@
                 <td class="py-3 px-6">Software Engineer</td>
                 <td class="py-3 px-6">IT</td>
                 <td class="py-3 px-6">ivan.petrov@sinksrus.com</td>
-                <td class="py-3 px-6"><a href="index.html"></a></td>
+                <td class="py-3 px-6"><a href="index.html">More</a></td>
                 
             </tr>
             <tr class="bg-[#5d5a5a] hover:bg-[#aaa2a2] hover:scale-105 cursor-pointer duration-300">
