--- a/employee.html
+++ b/employee.html
@@ -25,7 +25,7 @@
                 <td class="py-3 px-6">Software Engineer</td>
                 <td class="py-3 px-6">IT</td>
                 <td class="py-3 px-6">ivan.petrov@sinksrus.com</td>
-                <td class="py-3 px-6"><a href="index.html" class="text-white py-2">More</a></td>
+                <td class="py-3 px-6"><a href="index.html" class="text-white py-2 hover:bg-[#292626]">More</a></td>
                 
             </tr>
             <tr class="bg-[#5d5a5a] hover:bg-[#aaa2a2] hover:scale-105 cursor-pointer duration-300">
@@ -33,28 +33,28 @@
                 <td class="py-3 px-6">Marketing Manager</td>
                 <td class="py-3 px-6">Marketing</td>
                 <td class="py-3 px-6">pedro_los_banos@sinksrus.com</td>
-                <td class="py-3 px-6"><a href="index.html" class="text-white py-2">More</a></td>
+                <td class="py-3 px-6"><a href="index.html" class="text-white py-2 hover:bg-[#292626]">More</a></td>
             </tr>
             <tr class="bg-[#424040]  hover:bg-[#aaa2a2] hover:scale-105 cursor-pointer duration-300">
                 <td class="py-3 px-6">Ana Gómez</td>
                 <td class="py-3 px-6">HR Specialist</td>
                 <td class="py-3 px-6">HR</td>
                 <td class="py-3 px-6">ana.gomez@sinksrus.com</td>
-                <td class="py-3 px-6"><a href="index.html" class="text-white py-2">More</a></td>
+                <td class="py-3 px-6"><a href="index.html" class="text-white py-2 hover:bg-[#292626]">More</a></td>
             </tr>
             <tr class="bg-[#333232] hover:bg-[#aaa2a2] hover:scale-105 cursor-pointer duration-300">
                 <td class="py-3 px-6">John Wu</td>
                 <td class="py-3 px-6">Sales Associate</td>
                 <td class="py-3 px-6">Sales</td>
                 <td class="py-3 px-6">john.wu@sinksrus.com</td>
-                <td class="py-3 px-6"><a href="index.html" class="text-white py-2">More</a></td>
+                <td class="py-3 px-6"><a href="index.html" class="text-white py-2 hover:bg-[#292626]">More</a></td>
             </tr>
             <tr class="bg-[#282727] hover:bg-[#aaa2a2] hover:scale-105 cursor-pointer duration-300">
                 <td class="py-3 px-6">Emma Wilson</td>
                 <td class="py-3 px-6">CEO</td>
                 <td class="py-3 px-6">Admin</td>
                 <td class="py-3 px-6">emma@sinksrus.com</td>
-                <td class="py-3 px-6"><a href="index.html" class="text-white py-2">More</a></td>
+                <td class="py-3 px-6"><a href="index.html" class="text-white py-2 hover:bg-[#292626]">More</a></td>
             </tr>
         </tbody>
     </table>
