--- a/employee.html
+++ b/employee.html
@@ -29,7 +29,7 @@
                 <td class="py-3 px-6">Ivan Petrov</td>
                 <td class="py-3 px-6">Software Engineer</td>
                 <td class="py-3 px-6">IT</td>
-                <td class="py-3 px-6">ivan.petrov@sinksrus.com</td>
+                <td class="py-3 px-6">ivan.p@sinksrus.com</td>
                 <td class="py-3 px-6"><button class="btn" onclick="my_modal_1.showModal()">more</button></td>
                 
             </tr>
@@ -79,13 +79,13 @@
                     </tr>    
                 </thead>
                 <tbody class="text-[#ffffff] text-center">
-                    <tr class="bg-[#797373] hover:bg-[#aaa2a2] hover:scale-105 cursor-pointer duration-300">
+                    <tr class="bg-[#797373] hover:bg-[#aaa2a2] hover:scale-100 cursor-pointer duration-300">
                         <td class="py-3 px-6">Ivan Petrov</td>
                         <td class="py-3 px-6">Software Engineer</td>
                         <td class="py-3 px-6">IT</td>
-                        <td class="py-3 px-6">ivan.petrov@sinksrus.com</td>
+                        <td class="py-3 px-6">ivan.p@sinksrus.com</td>
                         <td class="py-3 px-6">555-6789</td>
-                        <td class="py-3 px-6">12 Red Square, Moscow</td>
+                        <td class="py-3 px-6">12 Square, Moscow</td>
                         <td class="py-3 px-6">Male</td>
                         <td class="py-3 px-6">Single</td>
                     </tr>
@@ -115,7 +115,7 @@
                     </tr>    
                 </thead>
                 <tbody class="text-[#ffffff] text-center">
-                        <tr class="bg-[#797373] hover:bg-[#aaa2a2] hover:scale-105 cursor-pointer duration-300">
+                        <tr class="bg-[#797373] hover:bg-[#aaa2a2] hover:scale-100 cursor-pointer duration-300">
                         <td class="py-3 px-6">Pedro Los Baños</td>
                         <td class="py-3 px-6">Marketing Manager</td>
                         <td class="py-3 px-6">Marketing</td>
@@ -150,7 +150,7 @@
                     </tr>    
                 </thead>
                 <tbody class="text-[#ffffff] text-center">
-                    <tr class="bg-[#797373] hover:bg-[#aaa2a2] hover:scale-105 cursor-pointer duration-300">
+                    <tr class="bg-[#797373] hover:bg-[#aaa2a2] hover:scale-100 cursor-pointer duration-300">
                         <td class="py-3 px-6">Ana Gómez</td>
                         <td class="py-3 px-6">HR Specialist</td>
                         <td class="py-3 px-6">HR</td>
@@ -185,7 +185,7 @@
                     </tr>    
                 </thead>
                 <tbody class="text-[#ffffff] text-center">
-                    <tr class="bg-[#797373] hover:bg-[#aaa2a2] hover:scale-105 cursor-pointer duration-300">
+                    <tr class="bg-[#797373] hover:bg-[#aaa2a2] hover:scale-100 cursor-pointer duration-300">
                         <td class="py-3 px-6">John Wu</td>
                         <td class="py-3 px-6">Sales Associate</td>
                         <td class="py-3 px-6">Sales</td>
@@ -221,7 +221,7 @@
                     </tr>    
                 </thead>
                 <tbody class="text-[#ffffff] text-center">
-                    <tr class="bg-[#797373] hover:bg-[#aaa2a2] hover:scale-105 cursor-pointer duration-300">
+                    <tr class="bg-[#797373] hover:bg-[#aaa2a2] hover:scale-100 cursor-pointer duration-300">
                         <td class="py-3 px-6">Emma Wilson</td>
                         <td class="py-3 px-6">CEO</td>
                         <td class="py-3 px-6">Admin</td>
