--- a/employee.html
+++ b/employee.html
@@ -40,21 +40,21 @@
                 <td class="py-3 px-6">p_baños@sinksrus.com</td>
                 <td class="py-3 px-6"><button class="btn" onclick="my_modal_2.showModal()">more</button></td>
             </tr>
-            <tr class="bg-[#424040]  hover:bg-[#aaa2a2] hover:scale-105 cursor-pointer duration-300" onclick="location.href='#name3';">
+            <tr class="bg-[#424040]  hover:bg-[#aaa2a2] hover:scale-105 cursor-pointer duration-300">
                 <td class="py-3 px-6">Ana Gómez</td>
                 <td class="py-3 px-6">HR Specialist</td>
                 <td class="py-3 px-6">HR</td>
                 <td class="py-3 px-6">ana.gomez@sinksrus.com</td>
                 <td class="py-3 px-6"><button class="btn" onclick="my_modal_3.showModal()">more</button></td>
             </tr>
-            <tr class="bg-[#333232] hover:bg-[#aaa2a2] hover:scale-105 cursor-pointer duration-300" onclick="location.href='#name4';">
+            <tr class="bg-[#333232] hover:bg-[#aaa2a2] hover:scale-105 cursor-pointer duration-300">
                 <td class="py-3 px-6">John Wu</td>
                 <td class="py-3 px-6">Sales Associate</td>
                 <td class="py-3 px-6">Sales</td>
                 <td class="py-3 px-6">john.wu@sinksrus.com</td>
                 <td class="py-3 px-6"><button class="btn" onclick="my_modal_4.showModal()">more</button></td>
             </tr>
-            <tr class="bg-[#282727] hover:bg-[#aaa2a2] hover:scale-105 cursor-pointer duration-300" onclick="location.href='#name5';">
+            <tr class="bg-[#282727] hover:bg-[#aaa2a2] hover:scale-105 cursor-pointer duration-300">
                 <td class="py-3 px-6">Emma Wilson</td>
                 <td class="py-3 px-6">CEO</td>
                 <td class="py-3 px-6">Admin</td>
