--- a/employee.html
+++ b/employee.html
@@ -103,6 +103,7 @@
         <div class="modal-box">
             <table>
                 <thead class="text-white"> 
+                    <div class="overflow-x-auto">
                     <tr>
                         <th class="py-3 bg-[#b0b0b0]">Name</th>
                         <th class="py-3 bg-[#b0b0b0]">Job Title</th>
@@ -112,7 +113,8 @@
                         <th class="py-3 bg-[#b0b0b0]">Address</th>
                         <th class="py-3 bg-[#b0b0b0]">Sex</th>
                         <th class="py-3 bg-[#b0b0b0]">Marital Status</th>
-                    </tr>    
+                    </tr>
+                    </div>   
                 </thead>
                 <tbody class="text-[#ffffff] text-center">
                         <tr class="bg-[#797373] hover:bg-[#aaa2a2] hover:scale-100 cursor-pointer duration-300">
