--- a/employee.html
+++ b/employee.html
@@ -63,7 +63,7 @@
             </tr>
         </tbody>
     </table>
-    <dialog id="my_modal_1" class="shadow-2xl border-2 bg-[#8b8585] w-7/12 overflow-shidden">
+    <dialog id="my_modal_1" class="shadow-2xl border-2 bg-[#8b8585] w-7/12 overflow-hidden">
         <div class="modal-box">
             <table>
                 <thead class="text-white"> 
@@ -102,8 +102,7 @@
     <dialog id="my_modal_2" class="shadow-2xl border-2 bg-[#8b8585] w-7/12 overflow-hidden">
         <div class="modal-box">
             <table>
-                <thead class="text-white"> 
-                    <div class="overflow-x-auto">
+                <thead class="text-white">
                     <tr>
                         <th class="py-3 bg-[#b0b0b0]">Name</th>
                         <th class="py-3 bg-[#b0b0b0]">Job Title</th>
@@ -113,8 +112,7 @@
                         <th class="py-3 bg-[#b0b0b0]">Address</th>
                         <th class="py-3 bg-[#b0b0b0]">Sex</th>
                         <th class="py-3 bg-[#b0b0b0]">Marital Status</th>
-                    </tr>
-                    </div>   
+                    </tr>  
                 </thead>
                 <tbody class="text-[#ffffff] text-center">
                         <tr class="bg-[#797373] hover:bg-[#aaa2a2] hover:scale-100 cursor-pointer duration-300">
