--- a/employee.html
+++ b/employee.html
@@ -99,7 +99,7 @@
             </div>
         </div>
     </dialog>
-    <dialog id="my_modal_2" class="shadow-2xl border-2 bg-[#8b8585] w-7/12 overflow-x-auto">
+    <dialog id="my_modal_2" class="shadow-2xl border-2 bg-[#8b8585] w-7/12 overflow-hidden">
         <div class="modal-box">
             <table>
                 <thead class="text-white">
