--- a/employee.html
+++ b/employee.html
@@ -63,7 +63,7 @@
             </tr>
         </tbody>
     </table>
-    <dialog id="my_modal_1" class="shadow-2xl border-2 bg-[#8b8585] w-7/12 overflow-hidden">
+    <dialog id="my_modal_1" class="shadow-2xl border-2 bg-[#8b8585] w-7/12 overflow-shidden">
         <div class="modal-box">
             <table>
                 <thead class="text-white"> 
@@ -99,7 +99,7 @@
             </div>
         </div>
     </dialog>
-    <dialog id="my_modal_2" class="shadow-2xl border-2 bg-[#8b8585] w-7/12 overflow-hidden">
+    <dialog id="my_modal_2" class="shadow-2xl border-2 bg-[#8b8585] w-7/12 overflow-shidden">
         <div class="modal-box">
             <table>
                 <thead class="text-white">
@@ -134,7 +134,7 @@
           </div>
         </div>
     </dialog>
-      <dialog id="my_modal_3" class="shadow-2xl border-2 bg-[#8b8585] w-7/12 overflow-hidden">
+      <dialog id="my_modal_3" class="shadow-2xl border-2 bg-[#8b8585] w-7/12 overflow-shidden">
         <div class="modal-box">
             <table>
                 <thead class="text-white"> 
@@ -169,7 +169,7 @@
           </div>
         </div>
       </dialog>
-      <dialog id="my_modal_4" class="shadow-2xl border-2 bg-[#8b8585] w-7/12 overflow-hidden">
+      <dialog id="my_modal_4" class="shadow-2xl border-2 bg-[#8b8585] w-7/12 overflow-shidden">
         <div class="modal-box">
             <table>
                 <thead class="text-white"> 
@@ -205,7 +205,7 @@
           </div>
         </div>
       </dialog>
-      <dialog id="my_modal_5" class="shadow-2xl border-2 bg-[#8b8585] w-7/12 overflow-hidden">
+      <dialog id="my_modal_5" class="shadow-2xl border-2 bg-[#8b8585] w-7/12 overflow-shidden">
         <div class="modal-box">
             <table>
                 <thead class="text-white"> 
