--- a/employee.html
+++ b/employee.html
@@ -30,7 +30,7 @@
                 <td class="py-3 px-6">Software Engineer</td>
                 <td class="py-3 px-6">IT</td>
                 <td class="py-3 px-6">ivan.p@sinksrus.com</td>
-                <td class="py-3 px-6"><button class="btn" onclick="my_modal_1.showModal()">more</button></td>
+                <td class="py-3 px-6"><button class="btn" onclick="my_modal_1.showModal() hover:text-[#292626]">more</button></td>
                 
             </tr>
             <tr class="bg-[#5d5a5a] hover:bg-[#aaa2a2] hover:scale-105 cursor-pointer duration-300">
